# trend-scraper-python

./: .gitignore  README.md  pyproject.toml  run_scraper.sh  test_project.py
.github/workflows/: update-bbc.yml  update-google.yml  update-komica.yml  update-ptt.yml  update-reddit.yml
data/: bbc-trends.json  google-trends.json  komica-trends.json  ptt-trends.json  reddit-all-hot.json  reddit-china-irl-hot.json  reddit-taiwanese-hot.json
src/: __init__.py  bbc_trends.py  google_trends.py  komica_trends.py  main.py  ptt_trends.py  reddit_trends.py
